objects/Account_Profile__c.object
<CustomObject>
    <fields>
        <fullName>B_EWP_T__c</fullName>
        <description>Builder</description>
        <label>Estimated Tile Wholesale Purchases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_EWP_Total__c</fullName>
        <description>Builder</description>
        <label>Estimated Wholesale Purchases Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_GOpp_ACT__c</fullName>
        <formula>B_GOpp_AC__c  + B_GOpp_RC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Green Opportunity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_GOpp_AC__c</fullName>
        <formula>B_EWP_AC__c * ( Primary_Business__r.Yellow_Threshold_Carpet__c / 100 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Green Opportunity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_GOpp_A__c</fullName>
        <formula>B_EWP_A__c * ( Primary_Business__r.Yellow_Threshold_Carpet__c / 100 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Green Opportunity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_GOpp_Car__c</fullName>
        <description>Builder</description>
        <label>Green Opportunity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_GOpp_Cus__c</fullName>
        <description>Builder</description>
        <label>Green Opportunity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_GOpp_Har__c</fullName>
        <description>Builder</description>
        <label>Green Opportunity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_GOpp_Hor__c</fullName>
        <formula>B_EWP_Hor__c * ( Primary_Business__r.Yellow_Threshold_Carpet__c / 100 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Green Opportunity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_GOpp_Kar__c</fullName>
        <formula>B_EWP_K__c * ( Primary_Business__r.Yellow_Threshold_Carpet__c / 100 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Green Opportunity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_GOpp_L__c</fullName>
        <description>Builder</description>
        <label>Green Opportunity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_GOpp_RC__c</fullName>
        <formula>B_EWP_RC__c * (Primary_Business__r.Yellow_Threshold_Resilient__c/100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Green Opportunity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_GOpp_RR__c</fullName>
        <formula>B_EWP_RR__c * (Primary_Business__r.Yellow_Threshold_Resilient__c/100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Green Opportunity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_GOpp_R__c</fullName>
        <description>Builder</description>
        <label>Green Opportunity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_GOpp_T__c</fullName>
        <description>Builder</description>
        <label>Green Opportunity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_GOpp_Total__c</fullName>
        <formula>B_GOpp_Car__c + B_GOpp_Cus__c + B_GOpp_Har__c  + B_GOpp_L__c + B_GOpp_T__c  + B_GOpp_R__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Green Opportunity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_Green_Opportunity_Total_d__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Builder</description>
        <label>Green Opportunity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_ROpp_ACT__c</fullName>
        <formula>B_ROpp_AC__c + B_Red_Opportunity_Resilient_Comm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Red Opportunity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_ROpp_AC__c</fullName>
        <formula>B_EWP_AC__c * ( 100 - Primary_Business__r.Red_Threshold_Carpet__c )/100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Red Opportunity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_ROpp_A__c</fullName>
        <formula>B_EWP_A__c * ( 100 - Primary_Business__r.Red_Threshold_Carpet__c )/100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Red Opportunity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_ROpp_Car__c</fullName>
        <description>Builder</description>
        <label>Red Opportunity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_ROpp_Cus__c</fullName>
        <description>Builder</description>
        <label>Red Opportunity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_ROpp_Har__c</fullName>
        <description>Builder</description>
        <label>Red Opportunity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_ROpp_Hor__c</fullName>
        <formula>B_EWP_Hor__c * ( 100 - Primary_Business__r.Red_Threshold_Carpet__c )/100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Red Opportunity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_ROpp_K__c</fullName>
        <formula>B_EWP_K__c * ( 100 - Primary_Business__r.Red_Threshold_Carpet__c )/100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Red Opportunity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_ROpp_L__c</fullName>
        <description>Builder</description>
        <label>Red Opportunity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_ROpp_R__c</fullName>
        <description>Builder</description>
        <label>Red Opportunity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_Red_Opportunity_Resilient_Comm__c</fullName>
        <formula>B_EWP_RC__c * (100 - Primary_Business__r.Red_Threshold_Resilient__c)/100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Red Opportunity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_Red_Opportunity_Resilient_Retail__c</fullName>
        <formula>B_EWP_RR__c * (100 - Primary_Business__r.Red_Threshold_Resilient__c)/100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Red Opportunity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_Red_Opportunity_Tile__c</fullName>
        <description>Builder</description>
        <label>Red Opportunity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_Red_Opportunity_Total__c</fullName>
        <formula>B_ROpp_Car__c + B_ROpp_Cus__c + B_ROpp_Har__c   + B_ROpp_L__c + B_Red_Opportunity_Tile__c  + B_ROpp_R__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Red Opportunity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_Red_Opportunity_Total_d__c</fullName>
        <description>Builder</description>
        <label>Red Opportunity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_Yellow_Opportunity_Aladdin_Comm_Total__c</fullName>
        <formula>B_Yellow_Opportunity_Aladdin_Comm__c + B_Yellow_Opportunity_Resilient_Comm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Yellow Opportunity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_Yellow_Opportunity_Aladdin_Comm__c</fullName>
        <formula>B_EWP_AC__c*(Primary_Business__r.Red_Threshold_Carpet__c - Primary_Business__r.Yellow_Threshold_Carpet__c)/100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Yellow Opportunity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_Yellow_Opportunity_Aladdin__c</fullName>
        <formula>B_EWP_A__c  *  ( Primary_Business__r.Red_Threshold_Carpet__c - Primary_Business__r.Yellow_Threshold_Carpet__c  )/100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Yellow Opportunity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_Yellow_Opportunity_Carpet__c</fullName>
        <description>Builder</description>
        <label>Yellow Opportunity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_Yellow_Opportunity_Cushion__c</fullName>
        <description>Builder</description>
        <label>Yellow Opportunity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_Yellow_Opportunity_Hardwood__c</fullName>
        <description>Builder</description>
        <label>Yellow Opportunity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_Yellow_Opportunity_Horizon__c</fullName>
        <formula>B_EWP_Hor__c  *  ( Primary_Business__r.Red_Threshold_Carpet__c - Primary_Business__r.Yellow_Threshold_Carpet__c  )/100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Yellow Opportunity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_Yellow_Opportunity_Karastan__c</fullName>
        <formula>B_EWP_K__c * (Primary_Business__r.Red_Threshold_Carpet__c - Primary_Business__r.Yellow_Threshold_Carpet__c)/100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Yellow Opportunity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_Yellow_Opportunity_Laminate__c</fullName>
        <description>Builder</description>
        <label>Yellow Opportunity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_Yellow_Opportunity_Resilient_Comm__c</fullName>
        <formula>B_EWP_RC__c * (Primary_Business__r.Red_Threshold_Resilient__c - Primary_Business__r.Yellow_Threshold_Resilient__c)/100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Yellow Opportunity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_Yellow_Opportunity_Resilient_Retail__c</fullName>
        <formula>B_EWP_RR__c*(Primary_Business__r.Red_Threshold_Resilient__c - Primary_Business__r.Yellow_Threshold_Resilient__c)/100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Yellow Opportunity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_Yellow_Opportunity_Resilient__c</fullName>
        <description>Builder</description>
        <label>Yellow Opportunity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_Yellow_Opportunity_Tile__c</fullName>
        <description>Builder</description>
        <label>Yellow Opportunity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_Yellow_Opportunity_Total__c</fullName>
        <formula>B_Yellow_Opportunity_Carpet__c + B_Yellow_Opportunity_Cushion__c + B_Yellow_Opportunity_Hardwood__c  + B_Yellow_Opportunity_Laminate__c + B_Yellow_Opportunity_Tile__c  + B_Yellow_Opportunity_Resilient__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Yellow Opportunity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_Yellow_Opportunity_Total_d__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Builder</description>
        <label>Yellow Opportunity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <inlineHelpText>Indicates the brand types</inlineHelpText>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aladdin Carpet</fullName>
                </value>
                <value>
                    <fullName>Aladdin Commercial Carpet</fullName>
                </value>
                <value>
                    <fullName>Aladdin Commercial Hard Surface</fullName>
                </value>
                <value>
                    <fullName>Horizon Carpet</fullName>
                </value>
                <value>
                    <fullName>Karastan Carpet</fullName>
                </value>
                <value>
                    <fullName>Portico Carpet</fullName>
                </value>
                <value>
                    <fullName>Portico Hard Surface</fullName>
                </value>
                <value>
                    <fullName>Properties Carpet</fullName>
                </value>
                <value>
                    <fullName>Properties Hard Surface</fullName>
                </value>
                <value>
                    <fullName>Mohawk Hard Surface</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Builder_Distribution_Karastan__c</fullName>
        <label>Karastan Product Category Allocation</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Builder_Multi_Channel_split__c</fullName>
        <formula>IF( Multi_Channel__c , Primary_Business__r.Builder_Multi_Family_Multi_Channel_Split__c , Primary_Business__r.Builder_Multi_Family_1_Channel_Split__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Builder/Multifamily Channel split %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Builder_Multifamily_Channel_split__c</fullName>
        <label>Builder/Multifamily Channel split %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Builder__c</fullName>
        <label>Builder</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Chain_Name__c</fullName>
        <label>Chain Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chain_Number__c</fullName>
        <externalId>true</externalId>
        <label>Chain Number</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Competitor_Alignment__c</fullName>
        <label>Competitor Alignment</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Armstrong Premier Retailer</fullName>
                </value>
                <value>
                    <fullName>Armstrong Preferred Retailer</fullName>
                </value>
                <value>
                    <fullName>Beaulieu Your Home Style Member</fullName>
                </value>
                <value>
                    <fullName>JJ Haines Loyalty Member</fullName>
                </value>
                <value>
                    <fullName>Mannington One</fullName>
                </value>
                <value>
                    <fullName>Shaw Flooring Gallery</fullName>
                </value>
                <value>
                    <fullName>Shaw Design Center</fullName>
                </value>
                <value>
                    <fullName>Shaw Flooring Alliance</fullName>
                </value>
                <value>
                    <fullName>Shaw Anso Premier Gallery</fullName>
                </value>
                <value>
                    <fullName>Stainmaster Flooring Center</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Mohawk_Share_Total__c</fullName>
        <description>Grand Total (Retail + Builder + Multi Family)</description>
        <label>Current Mohawk Share Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cut_Order__c</fullName>
        <label>Special Order %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Distribution_Aladdin__c</fullName>
        <label>Hide Distribution Aladdin %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Distribution_Mainstreet__c</fullName>
        <label>Mainstreet Product Category Allocation</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Distribution_Resilient__c</fullName>
        <description>% Distribution based on Primary Business (i.e., % retail sales by category)</description>
        <label>Resilient Product Category Allocation</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ERS_Car__c</fullName>
        <formula>Annual_Retail_Sales__c * (1-Annual_Retail_Sales_Non_Flooring__c) * R_Distribution_Carpet__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Carpet Retail Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ERS_Cus__c</fullName>
        <formula>Annual_Retail_Sales__c * (1-Annual_Retail_Sales_Non_Flooring__c) * R_Distribution_Cushion__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Carpet Retail Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ERS_Har__c</fullName>
        <formula>Annual_Retail_Sales__c * (1-Annual_Retail_Sales_Non_Flooring__c) * R_Distribution_Hardwood__c</formula>
        <label>Estimated Hardwood Retail Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ERS_Lam__c</fullName>
        <formula>Annual_Retail_Sales__c * (1-Annual_Retail_Sales_Non_Flooring__c) * R_Distribution_Laminate__c</formula>
        <label>Estimated Laminate Retail Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ERS_R__c</fullName>
        <formula>Annual_Retail_Sales__c * (1-Annual_Retail_Sales_Non_Flooring__c) * Distribution_Resilient__c</formula>
        <label>Estimated Resilient Retail Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ERS_T__c</fullName>
        <formula>Annual_Retail_Sales__c * (1-Annual_Retail_Sales_Non_Flooring__c) *  R_Distribution_Tile__c</formula>
        <label>Estimated Tile Retail Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ERS_Total__c</fullName>
        <description>Grand Total (Retail + Builder + Multi Family)</description>
        <label>Estimated Retail Sales Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EWP_Car__c</fullName>
        <formula>ERS_Car__c * Primary_Business__r.Retail_Sales_Carpet__c</formula>
        <label>Estimated Wholesale Purchases - Carpet</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EWP_Cus__c</fullName>
        <formula>ERS_Cus__c * Primary_Business__r.Retail_Sales_Cushion__c</formula>
        <label>Estimated Wholesale Purchases - Cushion</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EWP_Har__c</fullName>
        <formula>ERS_Har__c *  Primary_Business__r.Retail_Sales_Hardwood__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Wholesale Purchases - Hardwood</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EWP_Lam__c</fullName>
        <formula>ERS_Lam__c *  Primary_Business__r.Retail_Sales_Laminate__c</formula>
        <label>Estimated Wholesale Purchases - Laminate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EWP_M__c</fullName>
        <formula>EWP_R__c *  Primary_Business__r.Resilient_Mainstreet_Commercial_TM2_New__c</formula>
        <inlineHelpText>Indicates Estimated Wholesale Purchases - Main Street Commercial TM</inlineHelpText>
        <label>Estimated Wholesale Purchases Mainstreet</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EWP_RH__c</fullName>
        <formula>EWP_R__c *  Primary_Business__r.Resilient_Retail_Hard_TM2_New__c</formula>
        <inlineHelpText>Inticates Estimated Wholesale Purchases - Retail Hard TM</inlineHelpText>
        <label>Estimated Wholesale Purchases RetailHard</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EWP_R__c</fullName>
        <formula>ERS_R__c *  Primary_Business__r.Retail_Sales_Resilient__c</formula>
        <label>Estimated Wholesale Purchases Resilient</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EWP_T__c</fullName>
        <formula>ERS_T__c *  Primary_Business__r.Retail_Sales_Tile__c</formula>
        <label>Estimated Wholesale Purchases - Tile</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EWP_Total__c</fullName>
        <description>Grand Total (Retail + Builder + Multi Family)</description>
        <label>Estimated Wholesale Purchases Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GOpp_Total__c</fullName>
        <description>Grand Total (Retail + Builder + Multi Family)</description>
        <label>Green Opportunity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Green_Amount__c</fullName>
        <formula>IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 15, 15) &amp; &quot; USD &quot; &amp; IF(ABS((Annual_Retail_Sales__c * (1-Annual_Retail_Sales_Non_Flooring__c) * Primary_Business__r.Distribution_Carpet__c)) &gt;= 1000000, TEXT(FLOOR((Annual_Retail_Sales__c * (1-Annual_Retail_Sales_Non_Flooring__c) * Primary_Business__r.Distribution_Carpet__c) / 1000000)) &amp; &quot;,&quot;, &quot;&quot;)
&amp; IF(ABS((Annual_Retail_Sales__c * (1-Annual_Retail_Sales_Non_Flooring__c) * Primary_Business__r.Distribution_Carpet__c)) &gt;= 1000, RIGHT(TEXT(FLOOR((Annual_Retail_Sales__c * (1-Annual_Retail_Sales_Non_Flooring__c) * Primary_Business__r.Distribution_Carpet__c) / 1000)), 3) &amp; &quot;,&quot;, &quot;&quot;)
&amp; RIGHT(TEXT(FLOOR((Annual_Retail_Sales__c * (1-Annual_Retail_Sales_Non_Flooring__c) * Primary_Business__r.Distribution_Carpet__c))), 3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test Green Opportunity Amount Carpet</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Green_Opportunity_Amount_Carpet1__c</fullName>
        <label>&lt;font color=&quot;#FA807 &gt; Opportunity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hide_Horizon_Distribution__c</fullName>
        <label>Hide Horizon Distribution %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Hide_Karastan_Distribution__c</fullName>
        <label>Hide Karastan Distribution %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Hide_NK_Aladdin__c</fullName>
        <label>Hide NK Aladdin</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Hide_NK_Horizon__c</fullName>
        <label>Hide NK Horizon</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Hide_Unduplicated_Count__c</fullName>
        <description>Hidden field used in reports to avoid duplicate account profiles count</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Hidden field used in report</inlineHelpText>
        <label>Unduplicated Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Horizon_Distribution__c</fullName>
        <formula>If(No_Karastan__c = TRUE,  Primary_Business__r.No_Karastan_Horizon_Carpet__c,  Primary_Business__r.Estimated_Purchase_Horizon_Carpet__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Horizon Product Category Allocation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Horizon_Distribution_del__c</fullName>
        <formula>If(No_Karastan__c = TRUE,  Primary_Business__r.No_Karastan_Horizon_Carpet__c,  Primary_Business__r.Estimated_Purchase_Horizon_Carpet__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Horizon Distribution %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>If_Other_Alignment_Please_Specify__c</fullName>
        <label>If Other Alignment, Please Specify</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Karastan_Distribution__c</fullName>
        <formula>If(No_Karastan__c = TRUE,  Primary_Business__r.No_Karastan_Karastan_Carpet__c ,   Primary_Business__r.Estimated_Purchase_Karastan_Carpet__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Karastan Product Category Allocation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LMTD_AMP_Al_Comm_REPO__c</fullName>
        <label>LMTD - Actual Mohawk Purchases - Aladdin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LMTD_AMP_Al_REPO__c</fullName>
        <label>LMTD - Actual Mohawk Purchases - Aladdin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LMTD_AMP_Ca_Other_REPO__c</fullName>
        <label>LMTD - Actual Mohawk Purchases - Carpet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LMTD_AMP_Ca_Portico_REPO__c</fullName>
        <label>LMTD - Actual Mohawk Purchases - Carpet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LMTD_AMP_Ca_Prop_REPO__c</fullName>
        <label>LMTD - Actual Mohawk Purchases - Carpet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LMTD_AMP_Ca_REPO__c</fullName>
        <label>LMTD - Actual Mohawk Purchases - Carpet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LMTD_AMP_Car_Prop_REPO__c</fullName>
        <label>LMTD - AMP - Laminate Properties</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LMTD_AMP_Cu_Po_REPO__c</fullName>
        <label>LMTD - AMP - Cushion Potico</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LMTD_AMP_Cu_Prop_REPO__c</fullName>
        <label>LMTD - AMP - Cushion Properties</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LMTD_AMP_Cu_REPO__c</fullName>
        <label>LMTD - Actual Mohawk Purchases - Cushion</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LMTD_AMP_Ha_Po_REPO__c</fullName>
        <label>LMTD - AMP - Hardwood Potico</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LMTD_AMP_Ha_Prop_REPO__c</fullName>
        <label>LMTD - AMP - Hardwood Properties</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LMTD_AMP_Ha_REPO__c</fullName>
        <label>LMTD - Actual Mohawk Purchases - Hardwoo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LMTD_AMP_Ho_REPO__c</fullName>
        <label>LMTD - Actual Mohawk Purchases - Horizon</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LMTD_AMP_Ka_REPO__c</fullName>
        <label>LMTD - Actual Mohawk Purchases - Karasta</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LMTD_AMP_La_Po_REPO__c</fullName>
        <label>LMTD - AMP - Laminate Potico</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LMTD_AMP_La_REPO__c</fullName>
        <label>LMTD - Actual Mohawk Purchases - Laminat</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LMTD_AMP_Mainstreet_Com_REPO__c</fullName>
        <label>LMTD - Actual Mohawk Purchases - Mainstr</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LMTD_AMP_Prod_Cat_Other_REPO__c</fullName>
        <label>LMTD - Actual Mohawk Purchases - Other P</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LMTD_AMP_Re_Comm_REPO__c</fullName>
        <label>LMTD - Actual Mohawk Purchases - Resilie</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>